# recipe-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
src/: consts.py  main.py
src/bot/: __init__.py  abstract_base.py  bot_handler.py
