[project]
name = "recipe-bot"
version = "1.1.0"
description = "Telegram Bot for Recipe API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyrogram>=2.0.106",
    "pytelegrambotapi>=4.27.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "tgcrypto>=1.2.5",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.12.4",
]
